# deriv-trading-agent

./: .gitignore  README.md  abstract.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  state.py
backend/app/agents/: __init__.py  market_analysis.py  orchestrator.py  risk_management.py  trade_execution.py
backend/app/deriv/: __init__.py  client.py
backend/tests/: test_agents.py
frontend/: package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentPanel.tsx  ControlPanel.tsx  MarketData.tsx  PortfolioStats.tsx  ReasoningLog.tsx  TradeHistory.tsx
